--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f5f7fa;
+  background-color: #ffffff; /* 修改為純白色 */
 }
 
 code {
